# globalchat

./: .gitignore  Cargo.toml  Dockerfile  README.md  commands.locks.json  register.sh
.github/workflows/: docker.yml
.sqlx/: query-0392081c428595ac0c3c499c559a92c1e45b03e3e1407b0c11445581952a9854.json  query-103cada916a633e81f5ce0d42d430012d19787f0b94e87427c9840d567a19997.json  query-1dcf7c48a908b0f49f91c7eb74db75e8df2127b083d810402e1545bd060d09e8.json  query-87705c0e3dc8172fe908422df99c730d230ebadc7e7186a9d598ca1e40722353.json  query-8c5f670e13a1b44e2872b94f32672770077e6ea5415f6cc8754f56f5d1c5930a.json  query-9045acee46b303f8a7ae5f35be5719f3279a781f3a4d8d17a111e49f8f235b5f.json  query-912a48f33b9111715e7e614b2aa1556f6c7ceb0fda6475e7ea9f82b2721c39cd.json  query-fd14961badf809ed5efbdfcdb66cb05fe604dee635a22905e5e381df735644b4.json
migrations/: 20240621134522_globalchat.sql
src/: db.rs  main.rs
