[package]
name = "globalchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
vesper = { version = "0.13.0", features = ["bulk"] }
